adicionando mais produtos

--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -983,6 +983,77 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/16-2/caixa-de-som-16-2.jpeg"
+                                alt=" HP Caixa de som 2.1 DHS-2111S Preta Speaker com Alimentacao USB e conector 3.5mm potência do Subwoofer 5W 2B285AA" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Caixa de Som 2.1 Speaker</h5>
+                                    <!-- Product price-->
+                                    R$169,90
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/16-3/som-16-3.jpeg"
+                                alt=" BESTISAN Bluetooth Bookshelf RCA Speakers for Record Player, Turntable Speaker with 4 inch Woofer, Optical/RCA Inputs for PC and TV, White, Pair, SR06" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Caixa de Som BESTISAN SR0</h5>
+                                    <div class="text-muted text-decoration-line-through">R$419,94</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$377,94</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/16-4/som-16-4.jpeg"
+                                alt=" Bestisan SR04 Bluetooth Bookshelf Speakers for Record Player, Powered Studio Speaker for TV with Sub Out Port, Horn Tweeter and Optical/RCA/BT Inputs" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Caixa de Som BESTISAN SR04</h5>
+                                    <div class="text-muted text-decoration-line-through">R$475,14</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$427,62</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    @* Suporte de pulso *@
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/9/apoio-de-pulso.jpg"
                                 alt="Suporte de pulso ergonômico para teclado em formato de nuvem" />
                             <!-- Product details-->
@@ -992,6 +1063,27 @@
                                     <h5 class="fw-bolder">Suporte de Pulso Nuvem</h5>
                                     <!-- Product price-->
                                     R$313,00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/9-2/apoio-de-pulso-9-2-2.jpeg"
+                                alt="Bloss Almofada de mesa de couro e descanso de pulso para teclado, mouse pad grande + teclado + suporte de pulso para mouse, protetor de mesa antiderrapante para escritório, casa (80 x 40 cm, bege)" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Suporte de Pulso e Mouse Pad  </h5>
+                                    <!-- Product price-->
+                                    R$234,75
                                 </div>
                             </div>
                             <!-- Product actions-->
