--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -1074,6 +1074,8 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/9-2/apoio-de-pulso-9-2-2.jpeg"
                                 alt="Bloss Almofada de mesa de couro e descanso de pulso para teclado, mouse pad grande + teclado + suporte de pulso para mouse, protetor de mesa antiderrapante para escritório, casa (80 x 40 cm, bege)" />
@@ -1081,9 +1083,31 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Suporte de Pulso e Mouse Pad  </h5>
+                                    <h5 class="fw-bolder">Suporte de Pulso e Mouse Pad</h5>
+                                    <div class="text-muted text-decoration-line-through">R$234,75</div>
                                     <!-- Product price-->
-                                    R$234,75
+                                    <div class="fw-bold text-success">R$214,75</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/9/apoio-de-pulso.jpg"
+                                alt="Suporte de descanso de pulso para teclado e mouse, com espuma de memória ergonômica, base antiderrapante para escritório doméstico, laptop, desktop" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Suporte de Pulso Nuvem</h5>
+                                    <!-- Product price-->
+                                    R$25,95
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -1099,7 +1123,7 @@
                                 Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/14/eilik-1.jpg"
-                                alt="ilik Robô - Robô Inteligente" />
+                                alt="Eilik Robô - Robô Inteligente" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
