--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -1074,6 +1074,27 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/9-4/suporte-de-pulso-9-4.jpeg"
+                                alt="Apoio De Pulso Multilaser Para Teclado Em Gel Preto - Ac033 Desenho impresso Liso 51cm de comprimento e 6cm de largura, 2cm de altura" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Suporte de pulso Multilaser - Ac033</h5>
+                                    <!-- Product price-->
+                                    R$37,99
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                                 Promoção</div>
                             <!-- Product image-->
@@ -1096,16 +1117,17 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="~/img/produtos/9/apoio-de-pulso.jpg"
+                            <img class="card-img-top" src="~/img/produtos/9-3/suporte-de-pulso-9-3.jpeg"
                                 alt="Suporte de descanso de pulso para teclado e mouse, com espuma de memória ergonômica, base antiderrapante para escritório doméstico, laptop, desktop" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Suporte de Pulso Nuvem</h5>
+                                    <h5 class="fw-bolder">Suporte de pulso ergonômico</h5>
                                     <!-- Product price-->
                                     R$25,95
                                 </div>
