terminando de add os produtos

--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -1165,6 +1165,78 @@
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/14-2/alexa-14-2-4.jpg"
+                                alt="Echo Dot 5ª geração Amazon, com Alexa, Smart Speaker, Preto - B09B8VGCR8" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Alexa Echo Dot 5ª geração</h5>
+                                    <div class="text-muted text-decoration-line-through">R$526,30</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 449,99</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/14-3/alexa-14-3.png"
+                                alt="Echo Pop Amazon, com Alexa, Smart Speaker, Som Envolvente, Branco - B09ZXN77L2" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Alexa Echo Pop Amazon</h5>
+                                    <div class="text-muted text-decoration-line-through">R$556,30</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 449,99</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/14-4/alexa-14-4.jpg"
+                                alt="Alexa Echo Dot Geração Alexa Smart Speaker Wi-Fi - Amazon" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Alexa Echo Dot 3ª Geração - Amazon</h5>
+                                    <div class="text-muted text-decoration-line-through"> R$ 1.525,95</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success"> R$ 1.245,94</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/12/relogio-2.jpeg"
                                 alt="Relógio Digital 3D LED De Parede e Mesa Design Moderno Luz Noturna Decoração" />
@@ -1220,6 +1292,78 @@
                                     <div class="text-muted text-decoration-line-through">R$1.619,10</div>
                                     <!-- Product price-->
                                     <div class="fw-bold text-success">R$1.457,19</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/4-2/cadeira-4-2.webp"
+                                alt="Cadeira Gamer Flexform Alpha 2 Pro Black" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Cadeira Gamer Flexform Alpha Pro</h5>
+                                    <div class="text-muted text-decoration-line-through">R$3.899,00</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 3.509,10</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/4-3/cadeira-4-3.webp"
+                                alt="Cadeira Gamer Home Office Branca com Rosa Claro" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Cadeira Gamer Branca com Rosa Claro</h5>
+                                    <div class="text-muted text-decoration-line-through">R$3.999,00</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 3.509,10</div>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                                        <div class="col mb-5">
+                        <div class="card h-100">
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+                                Promoção</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/4-4/cadeira-4-4.jpeg"
+                                alt="Cadeira Gamer XT Racer Viking Series, Até 120 Kg, Com Almofadas, Reclinável, Descanso de Braço 3D, Preto - XTR-014o" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Cadeira Gamer XT Racer Viking Series</h5>
+                                    <div class="text-muted text-decoration-line-through">R$1.058,81</div>
+                                    <!-- Product price-->
+                                    <div class="fw-bold text-success">R$ 899,99</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
