termino da adição dos produtos

--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -1259,6 +1259,27 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/12-2/relogio-12-2.jpeg"
+                                alt="Relógio despertador digital, Relógio LED para quarto, Relógio eletrônico de mesa com visor de temperatura, brilho ajustável, controle de voz, visor 12/24H para casa, dormitório, escritório" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Relógio LED Digital</h5>
+                                    <!-- Product price-->
+                                    R$52,90
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/15/difusor-2.webp"
                                 alt="Umidificador em forma de nuvem com suporte dourado" />
                             <!-- Product details-->
@@ -1268,6 +1289,27 @@
                                     <h5 class="fw-bolder">Umidificador Nuvem</h5>
                                     <!-- Product price-->
                                     R$285,00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                        opções</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="~/img/produtos/15-2/difusor-15-2.jpeg"
+                                alt="Umidificador Ar Aromatizador Purificador Portátil Led 500ml" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Umidificador Led 500ml</h5>
+                                    <!-- Product price-->
+                                    R$78,99
                                 </div>
                             </div>
                             <!-- Product actions-->
