iniciando a implementação do banco de dados

--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -1259,7 +1259,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="~/img/produtos/12-2/relogio-12-2.jpeg"
+                            <img class="card-img-top" src="~/img/produtos/12-2/relogio-12-2.jpg"
                                 alt="Relógio despertador digital, Relógio LED para quarto, Relógio eletrônico de mesa com visor de temperatura, brilho ajustável, controle de voz, visor 12/24H para casa, dormitório, escritório" />
                             <!-- Product details-->
                             <div class="card-body p-4">
