finalização da adição dos produtos da loja

--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -249,7 +249,7 @@
                                 Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/17-2/monitor-17-2.jpg"
-                                alt="Monitor Gamer Curvo 30" MSI Optix MAG301CR / HDMI x2 / DP / WFHD / 200Hz / 1ms / HDR / MSI RGB Mystic Light" />
+                                alt="Monitor Gamer Curvo 30 MSI Optix MAG301CR / HDMI x2 / DP / WFHD / 200Hz / 1ms / HDR / MSI RGB Mystic Light" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -537,9 +537,9 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Led para monitor, com três temperaturas de cor e 15 modos de cor</h5>
-                                    <div class="text-muted text-decoration-line-through">R$ 189,99</div>
+                                    <div class="text-muted text-decoration-line-through">R$ 199,99</div>
                                     <!-- Product price-->
-                                    <div class="fw-bold text-success">R$ 199,99</div>
+                                    <div class="fw-bold text-success">R$ 189,99</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
