finalização da correção dos dados dos produtos da index

--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -553,7 +553,7 @@
                         <div class="card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="~/img/produtos/11-3/led-11-3-4.jpeg"
-                                alt="Baseus Luminária Led Monitor E Notebooks Regulável Cor Preta" />
+                                alt="Bases Luminária Led Monitor E Notebooks Regulável Cor Preta" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -581,7 +581,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Barra de Luz LED Curva para Monitor, com 3 temperaturas de cor e 7 cores RGB.</h5>
+                                    <h5 class="fw-bolder">Barra de Luz LED Curva para Monitor com 3 temperaturas de cor e 7 cores RGB</h5>
                                     <div class="text-muted text-decoration-line-through">R$288,10</div>
                                     <!-- Product price-->
                                     <div class="fw-bold text-success">R$ 278,10</div>
@@ -1062,7 +1062,7 @@
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Suporte de Pulso Nuvem</h5>
                                     <!-- Product price-->
-                                    R$313,00
+                                    R$320,00
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -1138,7 +1138,9 @@
                                         opções</a></div>
                             </div>
                         </div>
-                    </div>
+                    </div> 
+
+                    @* Assistentes *@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
@@ -1151,9 +1153,9 @@
                                 <div class="text-center">
                                     <!-- Product name-->
                                     <h5 class="fw-bolder">Eilik Robô</h5>
-                                    <div class="text-muted text-decoration-line-through">R$1.599,00</div>
+                                    <div class="text-muted text-decoration-line-through">R$1.799,00</div>
                                     <!-- Product price-->
-                                    <div class="fw-bold text-success">R$ 1.439,10</div>
+                                    <div class="fw-bold text-success">R$ 1.539,10</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -1177,7 +1179,7 @@
                                     <h5 class="fw-bolder">Alexa Echo Dot 5ª geração</h5>
                                     <div class="text-muted text-decoration-line-through">R$526,30</div>
                                     <!-- Product price-->
-                                    <div class="fw-bold text-success">R$ 449,99</div>
+                                    <div class="fw-bold text-success">R$ 489,99</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -1201,7 +1203,7 @@
                                     <h5 class="fw-bolder">Alexa Echo Pop Amazon</h5>
                                     <div class="text-muted text-decoration-line-through">R$556,30</div>
                                     <!-- Product price-->
-                                    <div class="fw-bold text-success">R$ 449,99</div>
+                                    <div class="fw-bold text-success">R$ 499,99</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -1225,7 +1227,7 @@
                                     <h5 class="fw-bolder">Alexa Echo Dot 3ª Geração - Amazon</h5>
                                     <div class="text-muted text-decoration-line-through"> R$ 1.525,95</div>
                                     <!-- Product price-->
-                                    <div class="fw-bold text-success"> R$ 1.245,94</div>
+                                    <div class="fw-bold text-success"> R$ 1.345,94</div>
                                 </div>
                             </div>
                             <!-- Product actions-->
@@ -1235,6 +1237,8 @@
                             </div>
                         </div>
                     </div>
+
+                    @* Relógios *@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
@@ -1277,6 +1281,8 @@
                             </div>
                         </div>
                     </div>
+
+                    @* Umidificadores *@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
@@ -1319,6 +1325,8 @@
                             </div>
                         </div>
                     </div>
+
+                    @* Cadeiras *@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
