--- a/LojaEstiloWeb/Views/Home/Index.cshtml
+++ b/LojaEstiloWeb/Views/Home/Index.cshtml
@@ -43,10 +43,20 @@
                 {
                     <div class="col mb-5">
                         <div class="card h-100">
+                            <!-- Product image-->
+                            @if (produto.Fotos.Count > 0)
+                            {
+                                <img class="card-img-top" src="@produto.Fotos[0].Foto" alt="@produto.Nome"/>
+                            }
+                            else 
+                            {
+                                <img class="card-img-top" src="~/img/produto-sem-imagem.jpg" alt="@produto.Nome"/>
+                            }
+                            
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                                 Promoção</div>
-                            <!-- Product image-->
-                            <img class="card-img-top" src="@produto.Fotos[0].Foto" alt="@produto.Nome" />
+                            
+                            
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -59,7 +69,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Ver
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" asp-controller="Home" asp-action="Produto" asp-route-id="@produto.Id">Ver
                                         opções</a></div>
                             </div>
                         </div>
