--- a/LojaEstiloWeb/Views/Categorias/Create.cshtml
+++ b/LojaEstiloWeb/Views/Categorias/Create.cshtml
@@ -4,20 +4,53 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1 class="my-4">Categoria</h1>
+<h1 class="my-4">CATEGORIA</h1>
 <h4 class="mb-4">Inclusão</h4>
-<hr>
-<div class="row">
-    <div class="card col">
-        <form asp-action="Create" class="w-100">
-           <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="mb-3">
-                <label asp-for="Nome" class="form-label"></label>
-                <input asp-for="Nome" class="form-control p-2">
-                <span asp-validation-for="Nome" class="text-danger"></span>
+
+
+<div class="card my-4 border-dark border-2 rounded-2">
+    <div class="card-body">
+        <form asp-action="Create" method="post" class="w-100" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="row">
+                <div class="col-md-8 col-lg-10">
+                    <div class="mb-3">
+                        <label asp-for="Nome" class="form-label"></label>
+                        <input asp-for="Nome" class="form-control p-2 border-dark border-2 rounded-2">
+                        <span asp-validation-for="Nome" class="text-danger"></span>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="Foto" class="form-label"></label>
+                        <input type="file" name="Arquivo" id="Arquivo" class="form-control p-2 border-dark border-2 rounded-2"
+                        accept=".jpg,.jpeg,.png,.gif,.webp">
+                    </div>
+                </div>
+                <div class="col-md-4 col-lg-2">
+                    <label for="" class="form-label">Prévia</label>
+                    <img src="" id="Preview" class="img-fluid">
+                </div>
+            </div>
+            <div class="d-flex mt-4">
+              <button type="submit" class="btn btn-primary me-2">
+                <i class="fas fa-save me-1"></i> Salvar
+              </button>
+              <a asp-action="Index" class="btn btn-danger">
+                <i class="fas fa-cancel me-1"></i> Cancelar
+              </a> 
             </div>
 
-            <input type="submit" value="Salvar">
         </form>
     </div>
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial"></partial>
+    <script>
+        document.querySelector("input[type='file']").addEventListener('change', function () {
+            if (this.files && this.files[0]) {
+                var img = document.getElementById('Preview');
+                img.src = URL.createObjectURL(this.files[0]);
+            }
+        })
+    </script>
+}
