--- a/LojaEstiloWeb/Views/Shared/_LayoutAdmin.cshtml
+++ b/LojaEstiloWeb/Views/Shared/_LayoutAdmin.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>GStore - @ViewData["Title"]</title>
+    <title>EstiloWeb - @ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/admin.css">
     <link rel="stylesheet" href="~/css/styles.css">
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -87,8 +87,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="~/js/admin.js"></script>
-    @await RenderSectionAsync("Scripts", required: false)
     <partial name="_Notification"></partial>
+    @await RenderSectionAsync("Scripts", required: false)
+    
 </body>
 
 </html>
