término da página de cadastro do usuário

--- a/LojaEstiloWeb/Views/Account/Login.cshtml
+++ b/LojaEstiloWeb/Views/Account/Login.cshtml
@@ -37,7 +37,7 @@
                     </form>
                 </div>
                 <div class="card-footer text-center py-3">
-                    <div class="small">Novo por aqui? <a href="register.html">Crie sua conta!</a></div>
+                    <div class="small">Novo por aqui? <a asp-action="Registro">Crie sua conta!</a></div>
                 </div>
             </div>
         </div>
